--- a/layouts/index.html
+++ b/layouts/index.html
@@ -21,19 +21,19 @@
 
     <main>
         <section>
-            <h2>Micro Blog</h2>
+            <h2><a href="/mastodon/">MicroBlog</a></h2>
             <article>article1</article>
             <article>article2</article>
             <article>article3</article>
         </section>
         <section>
-            <h2>Tech Blog</h2>
+            <h2><a href="/tech/">TechBlog</a></h2>
             <article>article1</article>
             <article>article2</article>
             <article>article3</article>
         </section>
         <section>
-            <h2>Music mixes</h2>
+            <h2><a href="/music/">Music Mixes</a></h2>
             <article>article1</article>
             <article>article2</article>
             <article>article3</article>
