--- a/layouts/index.html
+++ b/layouts/index.html
@@ -32,7 +32,7 @@
                 <article>
                     <h3>
                         <a href="{{ .Params.src_url }}">
-                            Read more...
+                            Show more...
                         </a>
                     </h3>
                 </article>
