--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -6,7 +6,7 @@
     <li>
         <div>
             <h3>
-                <a href="{{ .Params.src_url }}">{{ dateFormat "Mon, 02 Jan 2006 15:04:05 -0700" .Date }}</a>
+                <a href="{{ .Params.src_url }}">{{ dateFormat "Mon, 02 Jan 2006" .Date }}</a>
             </h3>
             {{ .Content }}
         </div>
