--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -16,7 +17,10 @@
     {{ $fontawesome := resources.Get "css/fontawesome.css" | resources.Minify }}
     <link rel="stylesheet" href="{{ $fontawesome.RelPermalink }}" type="text/css">
 
+    {{ $css := resources.Get "scss/main.scss" | resources.ToCSS | resources.Minify }}
+    <link rel="stylesheet" href="{{ $css.RelPermalink }}" type="text/css">
 </head>
+
 <body>
     <header>
         <nav>
@@ -47,7 +51,12 @@
     </main>
 
     <footer>
-        {{ block "footer" . }}{{ end }}
+        <small class="no-print">
+            Last update: <em>{{ partial "date" now.UTC }} UTC</em>
+            -
+            &copy; {{ now.Format "2006"}} {{ $.Param "author"}}
+        </small>
     </footer>
 </body>
+
 </html>
