--- a/layouts/index.html
+++ b/layouts/index.html
@@ -4,7 +4,7 @@
 
     <ul class="social-icons">
         {{ range .Site.Menus.socialnetworks }}
-        <li>{{ partial "fontawesome.html" . }}</a></li>
+        <li>{{ partial "fontawesome.html" . }}</li>
         {{ end }}
     </ul>
 
