--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -92,6 +92,16 @@ article {
     }
 }
 
+.extlink::before {
+    display: inline-block;
+    font-style: normal;
+    font-variant: normal;
+    text-rendering: auto;
+    -webkit-font-smoothing: antialiased;
+    font-family: "Font Awesome 5 Free";
+    content: "\f14d";
+}
+
 // main > section:nth-child(odd) {
 //     // display: none;
 //     // background-color: lighten(#050723, 5);
