--- a/layouts/partials/fontawesome.html
+++ b/layouts/partials/fontawesome.html
@@ -1,1 +1,1 @@
-<a href="{{ .URL }}" title="Go to {{ humanize .Name }} account"><i class="fab fa-{{ .Name }} fa-2x"></i>
+<a href="{{ .URL }}" title="Go to {{ humanize .Name }} account"><i class="fab fa-{{ .Name }} fa-2x"></i></a>
