--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -53,7 +53,7 @@
     </main>
 
     <footer>
-        <small class="no-print">
+        <small>
             Last update: <em>{{ partial "date" now.UTC }} UTC</em>
             -
             &copy; {{ now.Format "2006"}} {{ $.Param "author"}}
