--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -48,9 +48,7 @@
         {{ block "header" . }}{{ end }}
     </header>
 
-    <main>
-        {{ block "main" . }}{{ end }}
-    </main>
+    <main>{{ block "main" . }}{{ end }}</main>
 
     <footer>
         <small>
