--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -1,3 +1,10 @@
 {{ define "main" }}
+{{ $section := . }}
+
 <h1>{{ .Page.Title }}</h1>
+
+{{ range .Pages }}
+{{ partial "article" (dict "article" . "section" $section) }}
+{{ end }}
+
 {{ end }}
