--- a/layouts/partials/index_row.html
+++ b/layouts/partials/index_row.html
@@ -1,11 +1,11 @@
 {{ $context := .context }}
 {{ $sections := where $context.Site.Sections "Params.index_row" .row }}
 
-<nav>
+<nav class="select-tab">
 {{ range $section_index, $section := $sections }}
 
     {{ if isset $section.Params "index_row" }}
-    <a href="#{{ anchorize $section.Title }}"{{ if eq $section_index 0 }} class="active"{{ end }}>
+    <a href="#{{ anchorize $section.Title }}"{{ if eq $section_index 0 }} class="selected"{{ end }}>
         {{ $section.Title }}
     </a>
     {{ end }}
@@ -19,31 +19,7 @@
     {{ if isset $section.Params "index_row" }}
 
         {{ range first $context.Site.Params.articles_in_index $section.Pages }}
-        {{ $url := or .Params.src_url .RelPermalink }}
-
-        <article>
-
-            {{ if $section.Params.show_title }}
-            <h3>
-                <a href="{{ $url }}">{{ .Title }}</a>
-            </h3>
-            {{ end }}
-
-            {{ with .Params.description }}
-                {{ . }}
-            {{ else }}
-                {{ .Content | truncate 380 }}
-            {{ end }}
-
-            <a
-                href="{{ $url }}"
-                {{ if isset .Params "src_url" }}class="extlink"{{ end }}
-            >
-                {{ partial "date" .Date }}
-                {{ if not (isset $section.Params "src_url") }}Read more&#8230;{{end}}
-            </a>
-
-        </article>
+        {{ partial "article" (dict "article" . "section" $section) }}
         {{ end }}
 
         <a
