--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -91,12 +91,17 @@ article {
     }
 }
 
-.extlink::before {
+.extlink {
+    text-decoration: none;
+}
+
+.extlink::after {
     display: inline-block;
+    padding-left: 0.5rem;
     font-family: "Font Awesome 5 Free";
     font-style: normal;
     font-variant: normal;
-    font-weight: 900;
+    font-weight: 600;
     text-rendering: auto;
     -webkit-font-smoothing: antialiased;
     content: "\f35d";
