--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -115,6 +115,7 @@ article {
         text-decoration: none;
         background-color: var(--main-color);
         color: var(--bkg-color-light);
+        cursor: pointer;
     }
 
     a.selected {
