--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -112,8 +112,8 @@ article {
         padding-top: 1rem;
         padding-bottom: 0.3rem;
         text-decoration: none;
-        background-color: var(--main-color);
-        color: var(--bkg-color-light);
+        background-color: var(--bkg-color-dark);
+        // color: var(--bkg-color-light);
         cursor: pointer;
     }
 
