--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -57,6 +57,7 @@ section {
     padding: 1rem;
     margin-bottom: 3rem;
     line-height: 1.5rem;
+    background-color: var(--bkg-color-light);
 }
 
 article {
