--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -2,6 +2,7 @@
     --main-color: #FF7A00;
     --bkg-color-dark: #050723;
     --bkg-color-light: #151737;
+    --responsive-max-width: 799px;
 }
 
 ul {
