--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -1,3 +1,4 @@
+// :root stanza is parsed by index-tab.js and must be defined before each other
 :root {
     --main-color: #FF7A00;
     --bkg-color-dark: #050723;
