--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -5,10 +5,10 @@
     <small>{{ partial "date" .Date }}</small>
 </header>
 
-
 <section>
-    {{ .Content }}
+    <article>
+        {{ .Content }}
+    </article>
 </section>
-
 
 {{ end }}
