--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -3,6 +3,9 @@
     --main-color: #FF7A00;
     --bkg-color-dark: #050723;
     --bkg-color-light: #151737;
+    // would be nice to use --responsive-max-width in the media query but at the moment
+    // it's not supported:
+    // https://stackoverflow.com/questions/40722882/css-native-variables-not-working-in-media-queries
     --responsive-max-width: 799px;
 }
 
@@ -13,6 +16,14 @@ ul {
 
 a {
     color: var(--main-color);
+}
+
+p, h1, h2, h3, h4 {
+    margin: 0;
+}
+
+blockquote {
+    font-style: italic;
 }
 
 body {
@@ -71,6 +82,10 @@ article {
 
     small > a {
         text-decoration: underline;
+    }
+
+    p {
+        margin-bottom: 0.2rem;
     }
 }
 
@@ -137,4 +152,11 @@ footer {
 @keyframes fadeEffect {
     from {opacity: 0;}
     to {opacity: 1;}
+}
+
+@media screen and (min-width: 800px) {
+    div.index_content {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+    }
 }
